samples/_failures_safe/1761314780_6d9b1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdd92189.c: In function ‘main’:
./samples/SAFE/__tmp_fdd92189.c:150:5: error: expected expression at end of input
  150 |     int cols2 =
      |     ^~~
./samples/SAFE/__tmp_fdd92189.c:150:5: error: expected declaration or statement at end of input
